<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/searchBar"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <item android:id="@+id/homeMenu"
        android:icon="@drawable/menu"
        android:title="Item"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/userProfile"
                android:title="@string/userProfile"
                android:icon="@drawable/user"/>
            <item android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/home"/>
            <item android:id="@+id/setting"
                android:title="@string/settings"
                android:icon="@drawable/settings"/>
            <item android:id="@+id/logout"
                android:title="@string/logout"
                android:icon="@drawable/logout"/>
            <item android:id="@+id/aboutUs"
                android:title="@string/aboutUs"
                android:icon="@drawable/about_us"/>
        </menu>
    </item>
</menu>